<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/default_view_padding"
  android:clipToPadding="false"
  android:orientation="vertical">



  <androidx.cardview.widget.CardView
    android:id="@+id/cvCrypto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/card_elevation"
    android:orientation="horizontal">
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvCrypto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Click to select crypto currency"
      android:textStyle="bold"
      android:padding="@dimen/default_view_padding" />
  </androidx.cardview.widget.CardView>
  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvVs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:layout_marginTop="@dimen/default_view_margin"
    android:layout_marginBottom="@dimen/default_view_margin"
    android:text="@string/vs" />
  <androidx.cardview.widget.CardView
    android:id="@+id/cvCurrency"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/card_elevation"
    android:orientation="horizontal">
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvCurrency"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Click to select currency to compare"
      android:textStyle="bold"
      android:padding="@dimen/default_view_padding" />

  </androidx.cardview.widget.CardView>


  <androidx.cardview.widget.CardView
    android:id="@+id/cvComparison"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/comparison_top_margin"
    android:padding="@dimen/default_view_padding"
    android:paddingBottom="@dimen/default_view_padding"
    android:elevation="@dimen/card_elevation"
    android:orientation="horizontal">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <LinearLayout
        android:id="@+id/llPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvPricelbl"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/price"
          android:padding="@dimen/default_view_padding"
          />
        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvPriceVal"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:padding="@dimen/default_view_padding"
          />
      </LinearLayout>
      <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"/>
      <LinearLayout
        android:id="@+id/llMarketCap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvMarketCaplbl"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/market_cap"
          android:padding="@dimen/default_view_padding"
          />
        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvMarketCapVal"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:padding="@dimen/default_view_padding"
          />
      </LinearLayout>
      <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"/>
      <LinearLayout
        android:id="@+id/ll24hrVol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvVolumelbl"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/last_24hr_vol"
          android:padding="@dimen/default_view_padding"
          />
        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvVolumeVal"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:padding="@dimen/default_view_padding"
          />
      </LinearLayout>
      <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"/>
      <LinearLayout
        android:id="@+id/ll24hrChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvChangelbl"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/last_24hr_change"
          android:padding="@dimen/default_view_padding"
          />
        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvChangeVal"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:padding="@dimen/default_view_padding"
          />
      </LinearLayout>
      <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"/>
      <LinearLayout
        android:id="@+id/llLastUpdateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvUpdateTimelbl"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/last_update_time"
          android:padding="@dimen/default_view_padding"
          />
        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvUpdateTimeVal"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:layout_weight="1"
          android:padding="@dimen/default_view_padding"
          />
      </LinearLayout>
    </LinearLayout>
  </androidx.cardview.widget.CardView>

</LinearLayout>